--- a/style.css
+++ b/style.css
@@ -51,4 +51,13 @@
   font-size: 15px;
   cursor: pointer;
 }
+.product-card img {
+  width: 100%;
+  height: 180px;
+  object-fit: contain;
+  background: white;
+  border-radius: 10px;
+  padding: 10px;
+}
+
 
